--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -26,7 +26,8 @@ jobs:
           run_install: false
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install 
+        working-directory: ./packages/svelte-lexical
 
       - name: Build package
         working-directory: ./packages/svelte-lexical
@@ -59,7 +60,8 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
+        working-directory: ./packages/svelte-lexical
 
       - name: Build package
         working-directory: ./packages/svelte-lexical
@@ -71,10 +73,10 @@ jobs:
           # ensure package scope registry if needed
           # echo "@nutheory:registry=https://npm.pkg.github.com" >> ~/.npmrc
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish package
         working-directory: ./packages/svelte-lexical
         run: pnpm publish --no-git-checks --access restricted
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
