--- a/packages/svelte-lexical/package.json
+++ b/packages/svelte-lexical/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-lexical",
+  "name": "@nutheory/svelte-lexical",
   "description": "Rich Text editor for Svelte based on lexical",
   "version": "0.6.2",
   "type": "module",
@@ -32,7 +32,7 @@
     }
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@nutheory"
+    "registry": "https://npm.pkg.github.com/"
   },
   "svelte": "./dist/index.js",
   "types": "./dist/index.d.ts",
